--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://idatux.github.com
+production_url : http://idatux.org
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -70,9 +70,9 @@ JB :
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change theme here if needed.
   #
-  archive_path: /archive.html
-  categories_path : /categories.html
-  tags_path : /tags.html
+  archive_path: /blog/archivos.html
+  categories_path : /blog/categorias.html
+  tags_path : /blog/tags.html
 
   # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
@@ -81,7 +81,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : idatux
     livefyre :
       site_id : 123
     intensedebate :
@@ -96,10 +96,10 @@ JB :
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
   #        
-  analytics :
+  analytics : 
     provider : google
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-29209917-1'
     getclicky :
       site_id : 
 
@@ -122,3 +122,6 @@ JB :
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
   
+
+  ## custom
+  paginate: 6
